@@ -1,3 +1,8 @@
+1999-02-22  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* compiler-flags.m4: Only add the compilation warnings if the
+	compiler is GCC.
+
 1999-02-20  Timur Bakeyev <mc@bat.ru>
 
 	* gnome.m4: Added and exported ZVT_LIBS.
